--- a/web-automation-framework/frontend-reporte.html
+++ b/web-automation-framework/frontend-reporte.html
@@ -49,7 +49,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Mar 5, 2020 04:25:42 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Mar 12, 2020 01:47:42 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -64,7 +64,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
+										<li status='warning'><a href='#!'>Warning <i class='material-icons orange-text'>warning</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -107,10 +107,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> others
                 </div>
             </div>
         </div>
@@ -128,17 +128,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
+				<li class='test displayed active  warning' status='warning' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Recargas en Mi Movistar</span>
-						<span class='test-time'>Mar 5, 2020 04:25:42 PM</span>
-						<span class='test-status right pass'>pass</span>
+						<span class='test-name'>Recargas en Mi Movistar Completo (Generando automáticamente Token URL)</span>
+						<span class='test-time'>Mar 12, 2020 01:47:42 PM</span>
+						<span class='test-status right warning'>warning</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 5, 2020 04:25:42 PM</span>
-	<span class='label end-time'>Mar 5, 2020 04:26:40 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 58s+415ms</span>
+	<span class='label start-time'>Mar 12, 2020 01:47:42 PM</span>
+	<span class='label end-time'>Mar 12, 2020 01:49:26 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 43s+674ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -152,90 +152,98 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:25:53 PM</td>
+				<td class='timestamp'>1:48:04 PM</td>
 				<td class='step-details'>
 						Se inició correctamente la página Mi Movistar con el token
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051625530387-inicio-correctamente-pagina-movistar-token.png' src='./img/recargas-movistar/sec03051625530387-inicio-correctamente-pagina-movistar-token.png' data-src='./img/recargas-movistar/sec03051625530387-inicio-correctamente-pagina-movistar-token.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:25:55 PM</td>
+				<td class='timestamp'>1:48:04 PM</td>
 				<td class='step-details'>
 						Se ingresó el telefono : 920953950
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051625540760-ingreso-telefono-920953950.png' src='./img/recargas-movistar/sec03051625540760-ingreso-telefono-920953950.png' data-src='./img/recargas-movistar/sec03051625540760-ingreso-telefono-920953950.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:25:55 PM</td>
+				<td class='timestamp'>1:48:05 PM</td>
 				<td class='step-details'>
 						Se ingresó el monto en soles : 30
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051625550543-ingreso-monto-soles-30.png' src='./img/recargas-movistar/sec03051625550543-ingreso-monto-soles-30.png' data-src='./img/recargas-movistar/sec03051625550543-ingreso-monto-soles-30.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:25:56 PM</td>
+				<td class='timestamp'>1:48:06 PM</td>
 				<td class='step-details'>
 						Se dió clic en el botón Contiuar
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051625560172-clic-boton-contiuar.png' src='./img/recargas-movistar/sec03051625560172-clic-boton-contiuar.png' data-src='./img/recargas-movistar/sec03051625560172-clic-boton-contiuar.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:03 PM</td>
+				<td class='timestamp'>1:48:16 PM</td>
 				<td class='step-details'>
 						Se ingresa el correo: abraham@gmail.com
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626030149-ingresa-correo-abraham-gmail.png' src='./img/recargas-movistar/sec03051626030149-ingresa-correo-abraham-gmail.png' data-src='./img/recargas-movistar/sec03051626030149-ingresa-correo-abraham-gmail.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:05 PM</td>
+				<td class='timestamp'>1:48:16 PM</td>
 				<td class='step-details'>
 						Se dió clic en el botón Contiuar2
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626050496-clic-boton-contiuar2.png' src='./img/recargas-movistar/sec03051626050496-clic-boton-contiuar2.png' data-src='./img/recargas-movistar/sec03051626050496-clic-boton-contiuar2.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:18 PM</td>
+				<td class='timestamp'>1:48:32 PM</td>
 				<td class='step-details'>
 						Se ingresó la tarjeta de crédito : 4919148107859067
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626180116-ingreso-tarjeta-credito-4919148107859067.png' src='./img/recargas-movistar/sec03051626180116-ingreso-tarjeta-credito-4919148107859067.png' data-src='./img/recargas-movistar/sec03051626180116-ingreso-tarjeta-credito-4919148107859067.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:21 PM</td>
+				<td class='timestamp'>1:48:33 PM</td>
 				<td class='step-details'>
 						Se ingresó el mes: 03
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626210445-ingreso-03.png' src='./img/recargas-movistar/sec03051626210445-ingreso-03.png' data-src='./img/recargas-movistar/sec03051626210445-ingreso-03.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:24 PM</td>
+				<td class='timestamp'>1:48:34 PM</td>
 				<td class='step-details'>
 						Se ingresó el año: 2020
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626240712-ingreso-2020.png' src='./img/recargas-movistar/sec03051626240712-ingreso-2020.png' data-src='./img/recargas-movistar/sec03051626240712-ingreso-2020.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:27 PM</td>
+				<td class='timestamp'>1:48:34 PM</td>
 				<td class='step-details'>
 						Se ingresó EL CÓDIGO CVV: 740
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626270090-ingreso-codigo-740.png' src='./img/recargas-movistar/sec03051626270090-ingreso-codigo-740.png' data-src='./img/recargas-movistar/sec03051626270090-ingreso-codigo-740.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png'>
 				</td>
 			</tr>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:26:40 PM</td>
+			<tr class='log' status='warning'>
+				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
+				<td class='timestamp'>1:49:25 PM</td>
 				<td class='step-details'>
-						Se finalizó correctamente el flujo
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar/sec03051626400618-finalizo-correctamente-flujo.png' src='./img/recargas-movistar/sec03051626400618-finalizo-correctamente-flujo.png' data-src='./img/recargas-movistar/sec03051626400618-finalizo-correctamente-flujo.png'>
+						Verificar Imagen Flujo
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png'>
+				</td>
+			</tr>
+			<tr class='log' status='warning'>
+				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
+				<td class='timestamp'>1:49:26 PM</td>
+				<td class='step-details'>
+						Se extrae los siguientes datos: 20200312134816612725
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -283,19 +291,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 5, 2020 04:25:42 PM</div>
+					<div class='panel-lead'>Mar 12, 2020 01:47:42 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 5, 2020 04:26:41 PM</div>
+			 		<div class='panel-lead'>Mar 12, 2020 01:49:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 58s+709ms</div>
+					<div class='panel-lead'>0h 1m 47s+698ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -323,13 +331,13 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 1,
+				passParent: 0,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
-				warningParent: 0,
+				warningParent: 1,
 				skipParent: 0,
-				exceptionsParent: 0,
+				exceptionsParent: 1,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -354,7 +362,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Recargas en Mi Movistar":58.415
+			        "Recargas en Mi Movistar Completo (Generando automáticamente Token URL)":103.674
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
