Cambios en las evidencias. Naimar Garcia

--- a/web-automation-framework/frontend-reporte.html
+++ b/web-automation-framework/frontend-reporte.html
@@ -49,7 +49,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Mar 12, 2020 01:47:42 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Mar 17, 2020 06:14:44 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -131,14 +131,14 @@
 				<li class='test displayed active  warning' status='warning' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Recargas en Mi Movistar Completo (Generando automáticamente Token URL)</span>
-						<span class='test-time'>Mar 12, 2020 01:47:42 PM</span>
+						<span class='test-time'>Mar 17, 2020 06:14:45 PM</span>
 						<span class='test-status right warning'>warning</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 12, 2020 01:47:42 PM</span>
-	<span class='label end-time'>Mar 12, 2020 01:49:26 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 43s+674ms</span>
+	<span class='label start-time'>Mar 17, 2020 06:14:45 PM</span>
+	<span class='label end-time'>Mar 17, 2020 06:15:50 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 5s+324ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -152,98 +152,98 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:04 PM</td>
+				<td class='timestamp'>6:14:57 PM</td>
 				<td class='step-details'>
 						Se inició correctamente la página Mi Movistar con el token
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348030903-inicio-correctamente-pagina-movistar-token.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814570348-inicio-correctamente-pagina-movistar-token.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814570348-inicio-correctamente-pagina-movistar-token.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814570348-inicio-correctamente-pagina-movistar-token.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:04 PM</td>
+				<td class='timestamp'>6:14:58 PM</td>
 				<td class='step-details'>
 						Se ingresó el telefono : 920953950
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348040724-ingreso-telefono-920953950.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814580441-ingreso-telefono-920953950.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814580441-ingreso-telefono-920953950.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814580441-ingreso-telefono-920953950.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:05 PM</td>
+				<td class='timestamp'>6:14:59 PM</td>
 				<td class='step-details'>
-						Se ingresó el monto en soles : 30
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348050407-ingreso-monto-soles-30.png'>
+						Se ingresó el monto en soles : 10
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590080-ingreso-monto-soles-10.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590080-ingreso-monto-soles-10.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590080-ingreso-monto-soles-10.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:06 PM</td>
+				<td class='timestamp'>6:14:59 PM</td>
 				<td class='step-details'>
-						Se dió clic en el botón Contiuar
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348060079-clic-boton-contiuar.png'>
+						Se da clic en el botón Continuar
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590413-clic-boton-continuar.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590413-clic-boton-continuar.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171814590413-clic-boton-continuar.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:16 PM</td>
+				<td class='timestamp'>6:15:10 PM</td>
 				<td class='step-details'>
-						Se ingresa el correo: abraham@gmail.com
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160179-ingresa-correo-abraham-gmail.png'>
+						Se ingresa el correo: abraham@gmail.comSe da clic en continuar
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815090713-ingresa-correo-abraham-gmail-comse-clic-continuar.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815090713-ingresa-correo-abraham-gmail-comse-clic-continuar.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815090713-ingresa-correo-abraham-gmail-comse-clic-continuar.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:16 PM</td>
-				<td class='step-details'>
-						Se dió clic en el botón Contiuar2
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348160702-clic-boton-contiuar2.png'>
-				</td>
-			</tr>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:32 PM</td>
+				<td class='timestamp'>6:15:26 PM</td>
 				<td class='step-details'>
 						Se ingresó la tarjeta de crédito : 4919148107859067
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348320615-ingreso-tarjeta-credito-4919148107859067.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815260040-ingreso-tarjeta-credito-4919148107859067.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815260040-ingreso-tarjeta-credito-4919148107859067.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815260040-ingreso-tarjeta-credito-4919148107859067.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:33 PM</td>
+				<td class='timestamp'>6:15:27 PM</td>
 				<td class='step-details'>
 						Se ingresó el mes: 03
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348330350-ingreso-03.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270053-ingreso-03.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270053-ingreso-03.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270053-ingreso-03.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:34 PM</td>
+				<td class='timestamp'>6:15:28 PM</td>
 				<td class='step-details'>
 						Se ingresó el año: 2020
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340065-ingreso-2020.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270747-ingreso-2020.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270747-ingreso-2020.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815270747-ingreso-2020.png'>
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:48:34 PM</td>
+				<td class='timestamp'>6:15:28 PM</td>
 				<td class='step-details'>
 						Se ingresó EL CÓDIGO CVV: 740
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121348340720-ingreso-codigo-740.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280345-ingreso-codigo-740.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280345-ingreso-codigo-740.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280345-ingreso-codigo-740.png'>
+				</td>
+			</tr>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>6:15:29 PM</td>
+				<td class='step-details'>
+						Se ingrresaron los datos de la tarjeta, se da clic en pagar
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280653-ingrresaron-datos-tarjeta-clic-pagar.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280653-ingrresaron-datos-tarjeta-clic-pagar.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815280653-ingrresaron-datos-tarjeta-clic-pagar.png'>
 				</td>
 			</tr>
 			<tr class='log' status='warning'>
 				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
-				<td class='timestamp'>1:49:25 PM</td>
+				<td class='timestamp'>6:15:50 PM</td>
 				<td class='step-details'>
 						Verificar Imagen Flujo
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250609-verificar-imagen-flujo.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815490738-verificar-imagen-flujo.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815490738-verificar-imagen-flujo.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815490738-verificar-imagen-flujo.png'>
 				</td>
 			</tr>
 			<tr class='log' status='warning'>
 				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
-				<td class='timestamp'>1:49:26 PM</td>
+				<td class='timestamp'>6:15:50 PM</td>
 				<td class='step-details'>
-						Se extrae los siguientes datos: 20200312134816612725
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03121349250858-extrae-siguientes-datos-20200312134816612725.png'>
+						Se extrae los siguientes datos: 20200317181510539537
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815500068-extrae-siguientes-datos-20200317181510539537.png' src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815500068-extrae-siguientes-datos-20200317181510539537.png' data-src='./img/recargas-movistar-completo-generando-automaticamente-token/sec03171815500068-extrae-siguientes-datos-20200317181510539537.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -291,19 +291,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 12, 2020 01:47:42 PM</div>
+					<div class='panel-lead'>Mar 17, 2020 06:14:44 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 12, 2020 01:49:30 PM</div>
+			 		<div class='panel-lead'>Mar 17, 2020 06:15:54 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 47s+698ms</div>
+					<div class='panel-lead'>0h 1m 9s+213ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -362,7 +362,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Recargas en Mi Movistar Completo (Generando automáticamente Token URL)":103.674
+			        "Recargas en Mi Movistar Completo (Generando automáticamente Token URL)":65.324
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
